--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/noto-sans-kr": "^4.5.11",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/devtools": "^4.2.2",
     "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "^5.0.0-alpha.99",
