--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/material": "^5.10.5",
     "@mui/styles": "^5.10.3",
     "@mui/system": "^5.10.5",
+    "@mui/x-data-grid": "^5.17.5",
     "@mui/x-date-pickers": "^5.0.3",
     "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
